--- a/comant-client/src/app.scss
+++ b/comant-client/src/app.scss
@@ -1,4 +1,4 @@
 @charset "utf-8";
 
-@import 'title-bar/title-bar';
-@import 'login-form/login-form';
+@import 'blocks/title-bar/title-bar';
+@import 'blocks/courses-overview/course-card/course-card';
