--- a/comant-client/src/blocks/courses-list/course-card/course-card.scss
+++ b/comant-client/src/blocks/courses-list/course-card/course-card.scss
@@ -3,3 +3,7 @@
 .courses-list__course-card {
   @include panel;
 }
+
+.courses-list__course-card:hover {
+  background-color: darken($panel-bg, 10%);
+}
